--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br>
     <br>
     <br>
-    <br>
+    <a href="pip.html">external librarys needed! pip install command here</a>
     <br>
     <br>
     <a href="https://touchland.bayneiscoder.net/touchland.pyw">Download touchLand</a>
