--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <br>
     <br>
     <br>
-    <a href="pip.html">external librarys needed! pip install command here</a>
+    <a href="pip.html">external librarys needed! python instructions here</a>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <a href="https://touchland.bayneiscoder.net/touchland.pyw">Download touchLand</a>
