--- a/pip.html
+++ b/pip.html
@@ -11,7 +11,7 @@
     <br>
     <br>
     <p>if you dont have pip, install it </p>
-    <a href="get-pip.py">here!</a>
+    <a href="https://static.bayneiscoder.net/get-pip.py">here!</a>
     <br>
     <br>
     <br>
