--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <br>
     <br>
     <br>
-    <a href="https://touchland.bayneiscoder.net/touchland.pyw">Download touchLand</a>
+    <a href="https://static.bayneiscoder.net/touchland.pyw">Download touchLand</a>
     <br>
     <br>
-    <a href="https://touchland.bayneiscoder.net/touchland.py">Download touchLand Developer Edition</a>
+    <a href="https://static.bayneiscoder.net/touchland.py">Download touchLand Developer Edition</a>
     <br>
     <br>
     <br>
